--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Clone noscrypt
+      - name: Clone dependencies
         run: |
+          git clone https://github.com/privkeyio/libnostr-z ../libnostr-z
           git clone https://github.com/VnUgE/noscrypt ../noscrypt
-          cp deps/noscrypt-build.zig ../noscrypt/build.zig
+          cp ../libnostr-z/deps/noscrypt-build.zig ../noscrypt/build.zig
 
       - name: Install dependencies
         run: sudo apt-get update && sudo apt-get install -y liblmdb-dev libsecp256k1-dev libssl-dev
