--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,18 +16,15 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-linux
             artifact: wisp-linux-x86_64
-          - os: ubuntu-latest
+          - os: ubuntu-24.04-arm
             target: aarch64-linux
             artifact: wisp-linux-arm64
           - os: macos-latest
             target: aarch64-macos
             artifact: wisp-macos-arm64
-          - os: macos-latest
+          - os: macos-13
             target: x86_64-macos
             artifact: wisp-macos-x86_64
-          - os: windows-latest
-            target: x86_64-windows
-            artifact: wisp-windows-x86_64
 
     runs-on: ${{ matrix.os }}
 
