--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -19,21 +19,21 @@ on:
 jobs:
   benchmark:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.draft != true
+    if: ${{ github.event_name != 'pull_request' || !github.event.pull_request.draft }}
 
     steps:
       - uses: actions/checkout@v4
 
       - name: Clone nostr-bench
-        run: git clone --depth 1 https://github.com/privkeyio/nostr-bench ../nostr-bench
+        run: git clone --depth 1 --branch v0.1.0 https://github.com/privkeyio/nostr-bench ../nostr-bench
 
       - name: Install dependencies
         run: sudo apt-get update && sudo apt-get install -y liblmdb-dev libsecp256k1-dev libssl-dev netcat-openbsd
 
       - name: Setup Zig
-        run: |
-          curl -L https://ziglang.org/download/0.15.2/zig-x86_64-linux-0.15.2.tar.xz | tar -xJ
-          echo "$PWD/zig-x86_64-linux-0.15.2" >> $GITHUB_PATH
+        uses: mlugg/setup-zig@v2
+        with:
+          version: 0.15.2
 
       - name: Build wisp
         run: zig build -Doptimize=ReleaseSafe
@@ -43,9 +43,11 @@ jobs:
 
       - name: Run benchmark
         run: |
+          set -euo pipefail
           mkdir -p /tmp/wisp-data
           WISP_STORAGE_PATH=/tmp/wisp-data/wisp.lmdb ./zig-out/bin/wisp &
           WISP_PID=$!
+          trap 'kill ${WISP_PID} 2>/dev/null || true' EXIT
 
           for i in {1..30}; do
             if nc -z 127.0.0.1 7777 2>/dev/null; then
@@ -54,6 +56,10 @@ jobs:
             fi
             sleep 1
           done
+          if ! nc -z 127.0.0.1 7777 2>/dev/null; then
+            echo "Wisp did not become ready in time" >&2
+            exit 1
+          fi
 
           ../nostr-bench/zig-out/bin/nostr-bench \
             -r ws://127.0.0.1:7777 \
@@ -65,20 +71,13 @@ jobs:
             -e 2000 -w 4 --rate 500 --only-query \
             --report-file benchmark/query.json
 
-          python3 <<'EOF'
-          import json
-          import sys
-          try:
-              p = json.load(open('benchmark/peak.json'))
-              q = json.load(open('benchmark/query.json'))
-              p['results'].extend(q['results'])
-              json.dump(p, open('benchmark/results.json', 'w'), indent=2)
-          except Exception as e:
-              print(f"Error merging results: {e}")
-              sys.exit(1)
-          EOF
-
-          kill $WISP_PID 2>/dev/null || true
+          python3 -c "
+          import json, sys
+          p = json.load(open('benchmark/peak.json'))
+          q = json.load(open('benchmark/query.json'))
+          p['results'].extend(q['results'])
+          json.dump(p, open('benchmark/results.json', 'w'), indent=2)
+          "
 
       - name: Compare results
         run: |
