Fix release workflow: use macos-15-intel instead of retired macos-13

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
             artifact: wisp-linux-arm64
           - os: macos-latest
             artifact: wisp-macos-arm64
-          - os: macos-13
+          - os: macos-15-intel
             artifact: wisp-macos-x86_64
 
     runs-on: ${{ matrix.os }}
